# nodi-assessment

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/api/: interview.py  recruiter.py  sessions.py
backend/app/prompts/: evaluate_answer_linguistic.md  final_evaluation.md  generate_interview_plan.md  generate_probe.md  recruiter_chat.md
backend/app/services/: interview_engine.py  llm_service.py  naturalness.py  storage_service.py  stt_service.py  tts_service.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/candidate/intake/: page.tsx
frontend/app/candidate/interview/[id]/: page.tsx
frontend/app/recruiter/: page.tsx
frontend/app/recruiter/[id]/: page.tsx
frontend/components/: EvidenceCard.tsx  HireBadge.tsx  NaturalnessBreakdown.tsx  RecruiterChat.tsx  VoiceRecorder.tsx
frontend/lib/: api.ts
